Added filters to GET /customer. Added type to Customer model.
