# openapi.json
@@ -24,6 +24,32 @@
         ],
         "summary": "getCustomers",
         "operationId": "getCustomersUsingGET",
+        "parameters": [
+          {
+            "name": "first",
+            "in": "query",
+            "description": "first",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "last",
+            "in": "query",
+            "description": "last",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "description": "type",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -227,6 +253,13 @@
           },
           "last": {
             "type": "string"
+          },
+          "type": {
+            "type": "string",
+            "enum": [
+              "PRIORITY",
+              "NORMAL"
+            ]
           }
         }
       }
