# src/main/java/com/ealanta/swag/CustomerType.java
@@ -1,0 +1,5 @@
+package com.ealanta.swag;
+
+public enum CustomerType {
+    PRIORITY, NORMAL
+}
