# src/main/java/com/ealanta/swag/controllers/CustomerController.java
@@ -1,6 +1,8 @@
 package com.ealanta.swag.controllers;
 
 import com.ealanta.swag.Customer;
+import com.ealanta.swag.CustomerType;
+import com.google.common.base.Predicates;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -10,7 +12,10 @@ import java.lang.reflect.Field;
 import java.time.LocalDate;
 import java.time.Month;
 import java.util.*;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @RestController
 @RequestMapping("/customer")
@@ -22,6 +27,7 @@ public class CustomerController {
         bob.setFirst("Bob");
         bob.setLast("Builder");
         bob.setDob(LocalDate.of(1969, Month.JANUARY, 31));
+        bob.setType(CustomerType.PRIORITY);
     }
 
     private Customer sam =  new Customer();
@@ -30,6 +36,7 @@ public class CustomerController {
         sam.setFirst("Sam");
         sam.setLast("Fireman");
         sam.setDob(LocalDate.of(1950, Month.FEBRUARY, 1));
+        sam.setType(CustomerType.NORMAL);
     }
 
     private ArrayList<Customer> customers = new ArrayList<>(Arrays.asList(bob,sam));
@@ -46,9 +53,28 @@ public class CustomerController {
             return ResponseEntity.of(optCust);
     }
 
+    private static final Predicate<Customer> UNIT_FILTER = (c)->true;
+
     @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<List<Customer>> getCustomers(){
-        return ResponseEntity.ok(customers);
+    public ResponseEntity<List<Customer>> getCustomers(
+            @RequestParam(value = "first") Optional<String> optFirst,
+            @RequestParam(value = "last") Optional<String> optLast,
+            @RequestParam(value = "type") Optional<CustomerType> optType){
+
+        Function<String,Predicate<Customer>> firstMatch= (first) -> (c) -> c.getFirst().equals(first);
+        Predicate<Customer> predFirst = optFirst.map(firstMatch).orElse(UNIT_FILTER);
+
+        Function<String,Predicate<Customer>> lastMatch= (last) -> (c) -> c.getLast().equals(last);
+        Predicate<Customer> predLast = optLast.map(lastMatch).orElse(UNIT_FILTER);
+
+        Function<String,Predicate<Customer>> typeMatch= (type) -> (c) -> c.getType().equals(type);
+        Predicate<Customer> predType = optLast.map(typeMatch).orElse(UNIT_FILTER);
+
+        Predicate<Customer> customerPred = predFirst.and(predLast).and(predType);
+
+        List<Customer> filtered = customers.stream().filter(predFirst.and(predLast)).collect(Collectors.toList());
+
+        return ResponseEntity.ok(filtered);
     }
 
    @PutMapping(value="/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
